--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <div id="show_titles">
                 <img src="libs/favicon.png">
                 <div id="it">
-                    <h2>Netqon</h2>
-                    <h1>Overwork™
+                    <h2>FATECORE</h2>
+                    <h1>AppTimer™
                     </h1>
                     <h3>
                         APP用量统计，工作小时数统计，工作超载提醒，免费开源
@@ -120,17 +120,15 @@
                 </div>
 
                 <div>
-                    <a class="btn_download" href="http://overwork.netqon.com/download/latest/overwork-darwin-latest.dmg">DMG For Mac</a>
-                    <a class="btn_download" href="http://overwork.netqon.com/download/latest/overwork-win32-latest.zip">Installer For MSWin</a>
+                    <a class="btn_download" href="http://apptimer.fatecore.com/download/latest/overwork-darwin-latest.dmg">MacOS</a>
+                    <a class="btn_download" href="http://apptimer.fatecore.com/download/latest/overwork-win32-latest.zip">Windows</a>
                     <a class="btn_download" href="https://github.com/fateleak/overwork">Fork me on Github</a>
                 </div>
 
                 <footer id="foot">
                     <a>QQ群：568968683</a>
-                    <a href="http://m4j0r.com/articles/29">关于 | 用户协议</a>
-                    <!-- <a href="http://m4j0r.com/articles/22">友情链接</a> -->
-                    <a href="http://www.miibeian.gov.cn/">浙ICP备17048489号</a>
-                    <a href="http://boringuniverse.com">&copy; 2017-2018 netqon.com</a>
+                    ©️ 2018-2019 fatecore.com <a href="http://www.miitbeian.gov.cn">浙ICP备17048489号-26</a>
+
                 </footer>
             </div>
             <div class="flex-push"></div>
