--- a/content/index.html
+++ b/content/index.html
@@ -14,9 +14,9 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Netqon Overwork™是免费开源软件。它能够为您统计各个APP的用量时间，准确记录工作时间长度等，是简单可靠的办公伙伴。">
+    <meta name="description" content="FATECORE AppTimer™能够为您统计各个APP的用量时间，准确记录工作时间长度等，是简单可靠的办公伙伴。">
 
-    <title>Netqon Overwork™ App(A.F.C App) 办公时间统计/App用量统计/工作小时数统计/守护办公健康</title>
+    <title>FATECORE AppTimer™ App(A.F.C App) 办公时间统计/App用量统计/工作小时数统计/守护办公健康</title>
     <link rel="icon" href="libs/favicon.png" type="image/png" />
     <link rel="stylesheet" href="libs/bootstrap.css" />
     <script src="libs/jquery.js"></script>
@@ -114,7 +114,7 @@
                     <h1>AppTimer™
                     </h1>
                     <h3>
-                        APP用量统计，工作小时数统计，工作超载提醒，免费开源
+                        APP用量统计，工作小时数统计，掌握全天/周/月工作状态
                     </h3>
                     <div class="label">Downloads:</div>
                 </div>
@@ -128,7 +128,6 @@
                 <footer id="foot">
                     <a>QQ群：568968683</a>
                     ©️ 2018-2019 fatecore.com <a href="http://www.miitbeian.gov.cn">浙ICP备17048489号-26</a>
-
                 </footer>
             </div>
             <div class="flex-push"></div>
